# Version 2.5

## New Features:
* Virtual Networks - Added menu option to create a Swarm cluster and VLAN

## Enhancements:
* PiCTL can now upload container zip files.
* PiCluster Server displays version for / GET requests

## Bug Fixes:
* None