@@ -54,17 +54,19 @@
 
 		function exec() {
 			var node_list_add = document.getElementById("node_list_add");
+			//var modify_container_arguments = document.getElementById("modify_container_arguments");
 			var node_list_modify = document.getElementById("node_list_modify");
 			var container_list = document.getElementById("container_list");
 			var node_add = node_list_add.options[node_list_add.selectedIndex].value;
 			var node_modify = node_list_modify.options[node_list_modify.selectedIndex].value;
 			var container_add = $("#container_name").val();
 			var container_modify = container_list.options[container_list.selectedIndex].value;
-			var container_add_args = $("#container_args").val();
+			var container_add_args = $("#container_args").val() ||  $("#modify_container_arguments").val();
 			var heartbeat_add_args = $("#heartbeat_args").val();
 			var container_heartbeat_fieldset = document.getElementsByName('container_heartbeat_fieldset');
 			var radio_container_add = $('input[id=radio_container_add]:checked').val();
 			var radio_container_modify = $('input[id=radio_container_modify]:checked').val();
+			var radio_container_arg_modify = $('input[id=radio_modify_args]:checked').val();
 			var radio_start = $('input[id=radio_start]:checked').val();
 			var radio_stop = $('input[id=radio_stop]:checked').val();
 			var radio_restart = $('input[id=radio_restart]:checked').val();
@@ -90,6 +92,7 @@
 				radio_start && radio_start.indexOf('on') > -1 ? '/start' :
 				radio_stop && radio_stop.indexOf('on') > -1 ? '/stop' :
 				radio_restart && radio_restart.indexOf('on') > -1 ? '/restart' :
+				radio_container_arg_modify && radio_container_arg_modify.indexOf('on') > -1 ? '/change-container-args' :
 				radio_delete && radio_delete.indexOf('on') > -1 ? '/delete' :
 				radio_create && radio_create.indexOf('on') > -1 ? '/create' :
 				radio_container_log && radio_container_log.indexOf('on') > -1 ? '/containerlog' :
@@ -114,10 +117,11 @@
 						var div = document.getElementById('containers-manage-modal-body');
 						div.innerHTML = '<label id="windowfont"> Sent request to the server. Please check the logs and running containers for updated information.<br><br>\n' + data;
 					});
-				} else if (radio_start || radio_stop || radio_restart || radio_delete || radio_create || radio_container_log || radio_remove_container_config || radio_change_host) {
+				} else if (radio_start || radio_stop || radio_restart || radio_delete || radio_create || radio_container_log || radio_remove_container_config || radio_change_host || radio_container_arg_modify) {
 					$.post(path, {
 						token: parent.token,
 						command: command,
+						container_args: container_add_args,
 						container: container_modify,
 						newhost: node_modify
 					}, function(data) {
@@ -140,6 +144,19 @@
 				$(this).is(":checked") ? $("#container_list_modify").hide() : '';
 				$(this).is(":checked") ? $("#container_list_modify_options").hide() : '';
 			})
+
+	$("input[id$='radio_modify_args']").click(function() {
+		$.get("/getconfig?token=" + parent.token, function(data) {
+			var check_data = JSON.parse(data);
+			Object.keys(check_data.layout).forEach((get_node, i) => {
+				Object.keys(check_data.layout[i]).forEach(key => {
+		if(key.indexOf(document.getElementById("container_list").value) > -1) {
+							$('#modify_container_arguments').val(check_data.layout[i][document.getElementById("container_list").options[document.getElementById("container_list").selectedIndex].value]);
+						};
+				});
+					});
+		});
+				});
 
 			$("input[id$='radio_container_modify']").click(function() {
 				$("#container_list_options_fieldset").show();
@@ -193,7 +210,7 @@
 						<select name="container_list" id="container_list"></select>
 					</div>
 				</fieldset>
-				<fieldset name="options"  id="container_list_options_fieldset">
+				<fieldset name="options" id="container_list_options_fieldset">
 					<legend><b>Options</b></legend>
 
 					<div id="container_list_add_options">
@@ -230,6 +247,10 @@
 						<input type="radio" name="options_radio" id="radio_change_host">
 						<label for="radio_change_host">Change Node to</label>
 						<select name="node_list_modify" id="node_list_modify"></select>
+						<br>
+						<input type="radio" name="options_radio" id="radio_modify_args">
+						<label for="radio_modify_args">Change Container Arguments</label>
+						<input type="text" size="30" id="modify_container_arguments" class="modal_input" name="modify_container_arguments" value=""></font>
 					</div>
 				</fieldset>
 				<div id="submit_button_div">
